@@ -314,3 +314,5 @@ hacking/ChangeLog: the small scale changelog for libspectrum
 20050227 make-perl.c,libspectrum.h.in: advertise that we support zlib
          compressed files (Fred).
 20050302 Makefile.am: Stop automake trying to build make-perl (Fred).
+20050302 make-perl.c,myglib/ghash.c: Add g_hash_table_size to the glib
+         replacement code (Fred).
